      CrossValidation(errorfx=...). This class existed for a long time, but
      was hidden in the unit tests.
    - Add :class:`~mvpa2.mappers.fxy.FxyMapper` to perform arbitrary
      computations involving two datasets.
    - Add :class:`~mvpa2.mappers.base.CombinedMapper` to run a dataset through
      a set of mappers and combine their outputs.

* 2.0.1 (Tue, Mar 27 2012)

  Primarily a bugfix release

  * Fixes (21 BF commits)

    - hdf5 storage -- handle loading of objects with bound
      ``builtin_function_or_method``
    - use system-wide ``autosummary/generate.py`` for sphinx >= 1.1.2
	  (Closes: #658593)
    - :class:`ConditionalAttribute` should not loose value in deepcopy
	  when default off (Fixes #63)
    - correct handling of scalar mean/std values for :class:`ZScoreMapper`
    - MRI data import via _img2data now works with unicode
	  filenames (Fixes #60)
    - should work with IPython >= 0.11 now (Fixes #59)
    - various small fixes to improve tests and functionality
    - fix :class:`SMLR` segfaults on Windows (Thanks cgohlke for the patch)

  * Enhancements (29 ENH, OPT, and NF commits)

    - :class:`FxMapper` calls functions natively (instead of a slow
      row/column at a time) if they carry ``axis`` as the 2nd argument.
      Provides tremendous speed up for :func:`mean_sample` etc.
    - :func:`xrandom_unique_combinations` generator for random unique
      combinations
    - :func:`dual_gaussian` made more robust by not handling negative
      values for the standard deviations
    - :func:`dual_positive_gaussian`
    - expose "sensitivities" for :class:`PLR`
    - :class:`NFoldSplitter` float option for ``cvtype`` and
      intelligent behavior on 'random' limited by 'count' given a
      large number of folds
    - few additional learners from :mod:`sklearn` to the warehouses:
      ExtraTrees, RandomForest, LassoLarsIC
    - ``__repr__`` for :class:`Partitioner`s
	- new performance metric -- F1 score -- in the confusion matrix