@@ -158,7 +158,8 @@ if externals.exists('mdp ge 2.4'):
 __sdebug('measures')
 from mvpa2 import measures
 from mvpa2.measures.anova import *
-from mvpa2.measures.glm import *
+if externals.exists('statsmodels'):
+    from mvpa2.measures.statsmodels_adaptor import *
 from mvpa2.measures.irelief import *
 from mvpa2.measures.base import *
 from mvpa2.measures.noiseperturbation import *
